--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -17,9 +17,9 @@
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>WeatherApp</title>
   </head>
 
   <body>
@@ -28,22 +28,28 @@
       <p class="lead">A weather application that let's you manage your trip</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    
-    <div>
-      <div class="container">
-        <!-- Search bar container -->
-      </div>
-      <div class="container">
-        <!-- Weather details -->
-      </div>
-      <div class="container">
-        <!-- 5 day forecast-->
-      </div> 
 
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+          <input type="text" placeholder="City"><button type="button" class="query_btn btn btn-default btn-sm">Search</button><br>
+          <input type="text" placeholder="Zip Code"><button type="button" class="query_btn btn btn-default btn-sm">Search</button><br>
+      </div>
     </div>
-
+    
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+            <h2>City: <span id="city"></span></h2>
+            <h2>Main Weather: <span id="main_weather"></span></h2>
+            <h2>Description: <span id="description_weather"></span></h2>
+            <img id="weather_image" src="">
+            <h2>Temperature: <span id="temperature"></span></h2>
+            <h2>Pressure: <span id="pressure"></span></h2>
+            <h2>Humidity: <span id="humidity"></span></h2>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
